<resources>
    <string name="app_name">FamilyHub</string>
    <string name="setup_title">Connect to your FamilyHub</string>
    <string name="setup_body">Enter the address you use to open FamilyHub in a browser.</string>
    <string name="setup_hint">https://family.example.com</string>
    <string name="setup_connect">Connect</string>
    <string name="setup_checking">Checking…</string>
    <string name="error_title">Can\'t reach FamilyHub</string>
    <string name="error_body">Check your Wi-Fi or VPN, then try again.</string>
    <string name="retry">Try again</string>
    <string name="change_server">Change server</string>
</resources>
